# ble_link_control_service

./: .gitignore  CMakeLists.txt  Kconfig  README  README.md  central.conf  peripheral.conf  prj.conf
ble_app/: main.py  (+1 more)
central_peripheral/: CMakeLists.txt  external_flash.overlay  flash_logging.conf  phy_update.conf  prj.conf
central_peripheral/.cache/clangd/index/: central.c.B8DA82AE1BF9521F.idx  central_peripheral.c.191B3D96710F221B.idx  link_control.c.2406A34719E6D335.idx  link_control.h.939138BF786F2953.idx  link_control.h.EDBD4FD22C957B5C.idx  link_control_service.c.326E4AACC981822C.idx  link_control_service.c.B98810AA90E11F02.idx  link_control_service.h.0787F8467761857E.idx  link_control_service.h.5A969A068F1AED77.idx  peripheral.c.ECDBFACB4FDCC9B8.idx
central_peripheral/boards/: nrf21540dk_nrf52840.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nrf52dk_nrf52832.conf  nrf52dk_nrf52832.overlay  nrf54l15dk_nrf54l15_cpuapp.conf
central_peripheral/include/: central_peripheral.h  link_control.h  link_control_service.h
central_peripheral/src/: central_peripheral.c
central_peripheral/src/link_control/: link_control_service.c
peripheral/: CMakeLists.txt  Kconfig  fs_log.conf  prj.conf
peripheral/.cache/clangd/index/: link_control.c.66637C3D27512272.idx  (+4 more)
peripheral/boards/: nrf21540dk_nrf52840.conf  nrf21540dk_nrf52840.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay
peripheral/include/: link_control.h  link_control_service.h
peripheral/src/: peripheral.c
peripheral/src/link_control/: link_control.c  link_control_service.c
(+32 files in other folders)
